docs(backend): complete swagger docs
